# appointment-manangement

./: .dockerignore  .env.example  .env.production.example  .gitignore  BETA_SETUP.md  CACMS_Platform_Strategy_&_Build_Plan.md  CACMS_SALES_POINT_DOCUMENT.md  CLOUD_DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_AWS.md  DEPLOYMENT_SPEC_SHEET.md  Dockerfile  PROJECT_TRACKER.md  README.md  alembic.ini  docker-compose.aws.yml  docker-compose.public.yml  docker-compose.yml  e2e_test.py  pyproject.toml  seed_admin.py  seed_doctors.py
cacms/: __init__.py  config.py  database.py  exception_handlers.py  health.py  main.py  observability.py
cacms/config/: __init__.py  plans.py  settings.py
cacms/middleware/: audit_middleware.py  auth_middleware.py
cacms/migrations/: env.py
cacms/models/: __init__.py  appointment.py  audit_log.py  clinic.py  consultation.py  consultation_service.py  doctor.py  otp_session.py  patient.py  payment.py  permission.py  service.py  sse_event.py  usage_event.py  user.py
cacms/routers/: appointments.py  auth.py  backup.py  billing.py  clinic.py  consultations.py  doctors.py  events.py  exports.py  ops.py  public.py  (+7 more)
cacms_flutter/: README.md  pubspec.yaml
nginx/: cacms.conf
scripts/: backup_postgres.py  create_owner.py  restore_postgres.py  seed_permissions.py
terraform/: .gitignore  README.md  backend_user_data.sh.tpl  ec2.tf  fix_backend.sh  fix_compose.sh  frontend_user_data.sh.tpl  install_service.sh  main.tf  outputs.tf  rds.tf  security_groups.tf  terraform.tfvars.example  user_data.sh.tpl  variables.tf  vpc.tf  write_env.sh  write_env_backend.sh
(+127 files in other folders)
